[project]
name = "osmi"
version = "0.1.0"
description = "OSM data importer"
authors = [
    {name = "Lauri Hintsala", email = "lauri.hintsala@verkkopaja.fi"},
]
dependencies = [
    "osmium>=3.4.1",
    "geopandas>=0.11.1",
    "shapely>=1.8.5.post1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
